# agent-learn

./: .gitignore  AGENTS.md  PROGRESS.md  README.md  架构.md
projects/cicd-mcp-server/: Makefile  README.md  pyproject.toml
projects/cicd-mcp-server/scripts/: dev.sh
projects/it-ticket-agent/: .env.example  Makefile  README.md  ai-1.md  ai-2.md  ai-3.md  docker-compose.postgres.yml  mcp_connections.yaml.example  pyproject.toml  共享进度.md  并行分工方案.md  重构计划.md
projects/it-ticket-agent/data/: eval-report.json  mock_case_profiles.json  mock_db_profiles.json  mock_finops_profiles.json  mock_network_profiles.json  mock_sde_profiles.json  mock_tool_profiles.json  session-flow-eval-report.json  session-flow-live-eval-report.json  world-eval-report.json
projects/it-ticket-agent/docs/: RAG迁移说明.md  Tool-First-ReAct优化记录.md  Tool-First-ReAct多Subagent设计方案.md  Tool-First-ReAct开发TODO.md  Tool-First-ReAct迁移方案.md  architecture.md  deployment.md  operations-runbook.md  rag-production-plan.md  supervisor-subagent-mcp-refactor-plan.md  下一阶段多Agent演进计划.md  存储迁移计划.md  最新架构.md  架构设计.md  生产级Agent实施进度.md  生产级Agent演进总计划.md  运行手册.md  部署说明.md
projects/it-ticket-agent/scripts/: dev-pg.sh  dev.sh  export_bad_case_candidates.py  merge_curated_bad_cases.py  migrate_sqlite_to_postgres.py  probe_tool_calling.py  reindex_kb.py  run_agent_eval.py  seed_mock_incident_cases.py  sync_case_vector_index.py
projects/it-ticket-agent/tests/: test_additional_domain_agents.py  test_agent_eval.py  test_agent_registry.py  test_bad_case_export.py  test_cicd_tools.py  test_execution_contracts.py  test_frontend_smoke.py  test_parallel_orchestration.py  test_playbook_memory.py  test_postgres_storage_smoke.py  test_runtime_smoke.py  test_settings.py  test_shared_knowledge.py  test_skill_scenarios.py  test_tool_middleware.py  test_working_memory.py
projects/it-ticket-rag-service/: .env.example  Makefile  README.md  docker-compose.pgvector.yml  pyproject.toml
(+252 files in other folders)
